feat: finish milestone 2

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" class="vh-100">
 
   <head>
 
@@ -14,9 +14,9 @@
 
   </head>
 
-  <body>
+  <body class="h-100">
 
-    <div id="root"></div>
+    <div id="root" class="d-flex flex-column h-100"></div>
 
     <script type="module" src="/src/main.jsx"></script>
 
